<resources>
    <string name="app_name">WARU</string>
    <string name="notexist">오늘 하루를 기록 해보세요</string>
    <string name="exist">오늘의 감정 점수: %s</string>
    <string name="mainbtn">일기 기록하기</string>
    <string name="date">%s년 %s월 %s일</string>
    <string name="result">감정 결과 페이지</string>
    <string name="comment">코멘트 페이지</string>
    <string name="score">score: %s</string>
    <string name="magnitude">magnitude: %s</string>
    <string name="Frag1">감정 분석 결과</string>
    <string name="Frag2">코멘트</string>
    <string name="colortext">0.25 - 1.0 : color1\n-0.25-0.25 : color2\n-1.0 - 0.25 : color3</string>
</resources>